--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     
     <title>ecomApp</title>
       <!-- Favicon -->
-      <link href="img/favicon.ico" rel="icon" />
+      <link href="/img/favicon.ico" rel="icon" />
 
       <!-- Google Web Fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com" />
